[project]
name = "metroflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "langchain-groq>=0.3.4",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.4",
    "langchain[google-genai]>=0.3.26",
    "langgraph>=0.4.10",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
metroflux = "metroflux.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
